[package]
name = "ratelmq"
version = "0.0.1"
authors = ["Wojciech Wilk <galhadpl@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://ratelmq.com"
repository = "https://github.com/ratelmq/ratelmq"

[dependencies]
tokio = { version = "0.3.3", features = ["full"] }
tokio-util = { version="0.5.0", features = ["codec"]}
bytes = "0.6.0"
bitflags = "1.2.1"
num_enum = "0.5.1"
