[package]
name = "ratelmq"
version = "0.0.1"
authors = ["Wojciech Wilk <galhadpl@gmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://ratelmq.com"
repository = "https://github.com/ratelmq/ratelmq"
license = "Apache-2.0"

[dependencies]
tokio = { version = "0.3.3", features = ["full"] }
tokio-util = { version="0.5.0", features = ["codec"]}
bytes = "0.6.0"
bitflags = "1.2.1"
num_enum = "0.5.1"
async-trait = "0.1.42"
log = "0.4.13"
env_logger = "0.8.2"
dotenv = "0.15.0"
