[package]
name = "ratelmq-passwd"
version = "0.1.0"
authors = ["Wojciech Wilk <w.wilk@metasoftworks.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://ratelmq.com"
repository = "https://github.com/ratelmq/ratelmq"
license = "Apache-2.0"

[dependencies]
ratelmq = {path = ".."}

clap = "3.0.0-beta.2"
env_logger = "0.8.2"
regex = "1.5"
