[package]
name = "ratelmq-passwd"
version = "0.1.0"
authors = ["Wojciech Wilk <w.wilk@metasoftworks.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://ratelmq.com"
repository = "https://github.com/ratelmq/ratelmq"
license = "Apache-2.0"

[dependencies]
ratelmq = {path = ".."}

clap = "3.0.0-beta.5"
env_logger = "0.9.0"
regex = "1.5.4"
argon2 = "0.3.1"
rand_core = { version = "0.6", features = ["std"] }
